Improved background fade-in performance with WebWorker based blurring process. Blur algorithm borrowed from the StackBlur library by Mario Klingemann.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -225,3 +225,11 @@
     text-align: center;
     line-height: 50px;
 }
+
+
+#offscreen-canvas {
+    position: absolute;
+    right: 200%;
+    -webkit-filter: blur(20px);
+    display: none;
+}
