Implemented audio playback functionality with Audio html element. Implemented SoundCloud tracks streaming. Fixed graphical bug with track info display. Minor changes.

--- a/public/css/playlist.css
+++ b/public/css/playlist.css
@@ -11,6 +11,9 @@
     box-sizing: border-box;
     padding-top: 25px;
     color: white;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+    overflow-scrolling: touch;
 }
 .playlist .trick-btn {
     top: calc(50% - 16px);
