--- a/public/css/display.css
+++ b/public/css/display.css
@@ -2,7 +2,8 @@
     position: relative;
 
     width: 100%;
-    height: 35px;
+    height: 100%;
+    max-height: 50px;
     box-sizing: border-box;
     padding-left: 70px;
 }
@@ -16,7 +17,6 @@
     height: 30px;
     text-align: center;
     line-height: 24px !important;
-    border-radius: 50%;
     color: rgba(255, 255, 255, 0.6);
 }
 .trick-btn.pause {
