Changed playback logic: now scrolling through planets doesn't trigger the playback of the track, you have to explicitly click on it (or play button); plus, now at the end of a track the next one starts and if the leaving track is the centered one a nice animation snaps to the next one. Implemented custom "ended" event logic in the player. Cause of a bug, sometimes the audio tag ended event was not triggered by the browser. Promise.js is now a standalone module. Added polyfiller.js, a compendium of usefull polyfills and shims. Better handling of track informations. Added pause button animation; Better loading animation. Now only the playing planet has the spinning satellite, every other has it stopped. Other minor changes.

--- a/public/css/display.css
+++ b/public/css/display.css
@@ -20,11 +20,14 @@
     color: rgba(255, 255, 255, 0.6);
 }
 .trick-btn.pause {
-    background: url(../img/pause.png); background-repeat: no-repeat; background-size: 100%;
+    background: url(../img/trick-playing.png);
+    -webkit-animation: trick-btn-animation 600ms steps(20) infinite;
+    background-size: 30px 600px;
 }
 .trick-btn.loading {
-    background: url(../img/trick-loading.png);
-    -webkit-animation: trick-loading 1s steps(18) infinite;
+    background: url(../img/trick-loading2x.png);
+    -webkit-animation: trick-btn-animation 600ms steps(20) infinite;
+    background-size: 30px 600px;
 }
 .thumb {
     position: absolute;
@@ -89,11 +92,11 @@
 }
 
 
-@-webkit-keyframes trick-loading {
+@-webkit-keyframes trick-btn-animation {
     from {
-        background-position-y: -62px;
+        background-position-y: 0px;
     }
     to {
-        background-position-y: -620px;
+        background-position-y: 600px;
     }
 }
