--- a/views/mainlayout.hbs
+++ b/views/mainlayout.hbs
@@ -22,13 +22,6 @@
 {{#block "footer"}}
   {{> vendorscripts}}
 
-  {{!-- For Debugging Purposes Only --}}
-  {{!-- TODO: exclude this script in production environment
-  {{#if __dev__}}
-    <script type="text/javascript" src="/js/mock-server.js"></script>
-  {{/if}}
-  --}}
-
   {{!-- Core Scripts --}}
   <script type="text/javascript" src="/js/handlebars.helpers.js"></script>
   <script type="text/javascript" src="/js/templates.js"></script>
@@ -37,8 +30,7 @@
   {{!-- App Script --}}
   <script type="text/javascript" src="/js/{{appScript}}"></script>
 
-  {{!-- LiveReloading
-  --}}
+  {{!-- LiveReloading --}}
   {{#if __dev__}}
     <script type="text/javascript" src="http://localhost:35729/livereload.js?snipver=1"></script>
   {{/if}}
